<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Recipes Fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke">Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">dessert</string>
    <string name="appetizer">appetizer</string>
    <string name="salad">salad</string>
    <string name="bread">bread</string>
    <string name="breakfast">breakfast</string>
    <string name="soup">soup</string>
    <string name="beverage">beverage</string>
    <string name="sauce">sauce</string>
    <string name="marinade">marinade</string>
    <string name="fingerfood">fingerfood</string>
    <string name="snack">snack</string>
    <string name="drink">drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectur adipiscing elit.Lorem ipsum dolor sit amet, consectur adipiscing elit.</string>
    <string name="it_s_not_possible_load_message">It\'s not possible load message</string>
    <string name="sad_face_indicating_that_it_s_not_possible_load_data">Sad face indicating that it\'s not possible load data</string>
    <string name="share">Share</string>
</resources>